--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "isolatedModules": true,
     "noEmit": true,
     "paths": { "@/*": ["./src/*"] },
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
   },
-  "include": ["src"],
+  "include": ["./src/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
