--- a/.env.template
+++ b/.env.template
@@ -1,3 +1,4 @@
 #BASE api url what use for project, check api.ts and apiAuth.ts
 VITE_BASE_URL=http://localhost:30002/
-
+VITE_SUPABASE_URL=YOUR_SUPABASE_URL
+VITE_SUPABASE_ANON_KEY=YOUR_SUPABASE_ANON_KEY
