--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mui/styled-engine-sc": "^5.11.0",
     "@nivo/pie": "^0.80.0",
     "@reduxjs/toolkit": "^1.8.5",
+    "@supabase/supabase-js": "^2.21.0",
+    "@types/uuid": "^9.0.1",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.5",
@@ -40,6 +42,7 @@
     "redux-saga": "^1.2.1",
     "redux-thunk": "^2.4.1",
     "styled-components": "^5.3.6",
+    "uuid": "^9.0.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
